# mattak

./: Cargo.toml  README.md  TODO  flake.nix
mattak/: Cargo.toml
mattak/src/: biscuits.rs  condreq.rs  error.rs  hypermedia.rs  lib.rs  ratelimiting.rs
mattak/src/biscuits/: keysets.rs  middleware.rs  resources.rs  resources.rs.planned
mattak/src/biscuits/middleware/: check.rs  setup.rs
mattak/src/routing/: de.rs  extract.rs  mod.rs  parser.rs  render.rs  ser.rs
mattak_biscuits/: Cargo.toml
mattak_biscuits/src/: keysets.rs  lib.rs  resources.rs
mattak_biscuits/src/middleware/: check.rs  setup.rs
mattak_cachecontrol/: Cargo.toml
mattak_cachecontrol/src/: lib.rs
mattak_condreq/: Cargo.toml
mattak_condreq/src/: lib.rs
mattak_derives/: Cargo.toml
mattak_derives/src/: lib.rs
mattak_derives/tests/: integration_tests.rs
mattak_hypermedia/: Cargo.toml
mattak_hypermedia/src/: lib.rs
mattak_querymapping/: Cargo.toml
mattak_querymapping/src/: lib.rs
mattak_ratelimiting/: Cargo.toml
mattak_ratelimiting/src/: lib.rs
mattak_routing/: Cargo.toml
mattak_routing/src/: de.rs  extract.rs  lib.rs  ser.rs
