[workspace]
resolver = "2"
members = [
  "mattak",
  "mattak_biscuits",
  "mattak_cachecontrol",
  "mattak_condreq",
  "mattak_derives",
  "mattak_hypermedia",
  "mattak_querymapping",
  "mattak_ratelimiting",
  "mattak_routing"
]

# per https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Judson Lester <nyarly+mattak@gmail.com>"]
categories = ["web-programming", "web-programming::http-server" ]
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/nyarly/mattak"
repository = "https://github.com/nyarly/mattak"

[workspace.dependencies]
tracing = "0.1"
thiserror = "1.0.63"
axum = { version = "0.7", features = ["macros", "json"]}
axum-extra = { version = "0.9.3", features = ["query", "typed-header"] }
base64ct = { version = "1.6.0", features = ["alloc"] }
chrono = { version = "0.4.38" }
iri-string = { version = "0.7.4", features = ["serde"] }
percent-encoding = "2.3.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
hyper = { version = "1.4", features = ["client", "http1"] }
tower = "0.4.13"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
futures = "0.3.30"
futures-util = "0.3.30"
