[package]
name = "mattak"
description = "A collection of tools to support semantic hypermedia in Axum"
keywords = ["axum", "semweb", "hypermedia", "web"]

version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
mattak_biscuits = { version = "0.3.0", path = "../mattak_biscuits" }

tracing = "0.1"

axum = { version = "0.7", features = ["macros", "json"]}
iri-string = { version = "0.7.4", features = ["serde"] }

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
percent-encoding = "2.3.1"
regex = "1.10.6"
nom = "7.1.3"

thiserror = "1.0.63"

# just for biscuits
#zeroize = { version = "1.8.2", features = ["derive", "std"] }
#argon2 = { version = "0.5.3", features = ["zeroize"] }

axum-extra = { version = "0.9.3", features = ["query", "typed-header"] }
futures = "0.3.30"
futures-util = "0.3.30"
pin-project-lite = "0.2.14"
hyper = { version = "1.4", features = ["client", "http1"] }
tower = "0.4.13"

# condreq
sha2 = "0.10.8"
base64ct = { version = "1.6.0", features = ["alloc"] }
# tracing-test = "0.2.5"

# cachecontrol
chrono = { version = "0.4.38" }

# ratelimiting
tower_governor = { version = "0.5.0", features = ["tracing"] }
governor = "0.8.0"
typemap-ors = "1.0.0"

# querymapping
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
bounded_join_set = "0.3.0"

[dev-dependencies]
tracing-test = "0.2.5"
