[package]
name = "mattak"
description = "A collection of tools to support semantic hypermedia in Axum"
keywords = ["axum", "semweb", "hypermedia", "web"]

version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
thiserror.workspace = true
tracing.workspace = true

mattak_biscuits = { version = "0.3.0", path = "../mattak_biscuits" }
mattak_cachecontrol = { version = "0.3.0", path = "../mattak_cachecontrol" }
mattak_condreq = { version = "0.3.0", path = "../mattak_condreq" }
mattak_hypermedia = { version = "0.3.0", path = "../mattak_hypermedia" }
mattak_querymapping = { version = "0.3.0", path = "../mattak_querymapping" }
mattak_ratelimiting = { version = "0.3.0", path = "../mattak_ratelimiting" }
mattak_routing = { version = "0.3.0", path = "../mattak_routing" }
[dev-dependencies]
tracing-test = "0.2.5"
