[package]
name = "mattak_cachecontrol"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
license-file.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
hyper.workspace = true
tower.workspace = true
