[package]
name = "mattak_condreq"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
license-file.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
sha2 = "0.10.8"

axum.workspace = true
axum-extra.workspace = true
base64ct.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
