[package]
name = "mattak_derives"
description = "derives for supporting mattak"
keywords = ["axum", "semweb", "web", "derive"]

version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"

[dev-dependencies]
iri-string = { version = "0.7.4", features = ["serde"] }
mattak = { path = "../mattak" }
serde = { version = "~1.0.204", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(debug_output)'] }
