[package]
name = "mattak_hypermedia"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
license-file.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
iri-string.workspace = true
serde.workspace = true
thiserror.workspace = true
