[package]
name = "mattak_ratelimiting"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
license-file.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tower_governor = { version = "0.5.0", features = ["tracing"] }
governor = "0.8.0"
tracing.workspace = true
axum.workspace = true
