[package]
name = "mattak_routing"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
license-file.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
mattak_hypermedia = { version = "0.3.0", path = "../mattak_hypermedia" }

serde.workspace = true
thiserror.workspace = true
axum.workspace = true
hyper.workspace = true
tracing.workspace = true
iri-string.workspace = true

percent-encoding = "2.3.1"
regex = "1.10.6"
nom = "7.1.3"
typemap-ors = "1.0.0"

[dev-dependencies]
tracing-test = "0.2.5"
